--- a/index.html
+++ b/index.html
@@ -18,6 +18,15 @@
 				border: 0 solid orangered;
 				border-width: 0 0 2px;
 			}
+
+			/* global styles */
+			.ice {
+				color: blue;
+			}
+
+			.fire {
+				color: red;
+			}
 		</style>
 	</head>
 
